<resources>
    <string name="app_name">Covid Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_district">My District</string>
    <string name="my_state">My State</string>
    <string name="my_country">My Country</string>
    <string name="affected">Affected</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="change">New Cases</string>
    <string name="dailyNewCases">Daily New Cases</string>
</resources>