<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.StatisticsFragment">

    <data>
        <variable
            name="stats"
            type="com.example.covidtracker.model.StatisticsData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/HeaderText"
            android:textColor="@color/textOnBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginTop="@dimen/margin_sides"
            android:text="@{stats.location}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Jammu" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/tabs_bg"
            app:layout_constraintBottom_toBottomOf="@id/tabsBottom"
            app:layout_constraintEnd_toEndOf="@id/tabsRight"
            app:layout_constraintStart_toStartOf="@id/tabsLeft"
            app:layout_constraintTop_toTopOf="@id/tabsTop" />

        <View
            android:id="@+id/tabsTop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tabsLocation"
            app:layout_constraintStart_toStartOf="@id/tabsLocation" />

        <View
            android:id="@+id/tabsBottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@id/tabsLocation"
            app:layout_constraintTop_toBottomOf="@id/tabsLocation" />

        <View
            android:id="@+id/tabsRight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/tab_bg_margin"
            app:layout_constraintBottom_toTopOf="@id/tabsLocation"
            app:layout_constraintStart_toEndOf="@id/tabsLocation" />

        <View
            android:id="@+id/tabsLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/tab_bg_margin"
            app:layout_constraintEnd_toStartOf="@id/tabsLocation"
            app:layout_constraintTop_toTopOf="@id/tabsLocation" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tabsLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginTop="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            app:checkedChip="@id/chipDistrict"
            app:chipSpacingHorizontal="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDistrict"
                style="@style/ChipStyle"
                android:checked="true"
                android:text="@string/my_district"
                android:textColor="@color/chip_text"
                app:chipBackgroundColor="@color/chip_bg"
                app:rippleColor="@color/white" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipState"
                style="@style/ChipStyle"
                android:text="@string/my_state"
                android:textColor="@color/chip_text"
                app:chipBackgroundColor="@color/chip_bg"
                app:rippleColor="@color/white" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAffected"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginTop="@dimen/margin_sides"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintDimensionRatio="155:100"
            app:layout_constraintEnd_toStartOf="@id/cardDeath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabsLocation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TabText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="@dimen/margin_sides"
                    android:text="@string/affected"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAffected"
                    style="@style/CountText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{stats.confirmed}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="336,851" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDeath"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            app:cardBackgroundColor="@color/chip_bg_purple"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintDimensionRatio="155:100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardAffected"
            app:layout_constraintTop_toBottomOf="@id/tabsLocation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TabText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="@dimen/margin_sides"
                    android:text="@string/deaths"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDeaths"
                    style="@style/CountText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{stats.deaths}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="336,851" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardRecovered"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintDimensionRatio="0.98"
            app:layout_constraintEnd_toStartOf="@id/cardActive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardAffected">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TabText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="@dimen/margin_sides"
                    android:text="@string/recovered"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRecovered"
                    style="@style/CountTextSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{stats.recovered}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="336,851" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardActive"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintDimensionRatio="0.98"
            app:layout_constraintEnd_toStartOf="@id/cardChange"
            app:layout_constraintStart_toEndOf="@id/cardRecovered"
            app:layout_constraintTop_toBottomOf="@id/cardAffected">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TabText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="@dimen/margin_sides"
                    android:text="@string/active"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvActive"
                    style="@style/CountTextSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{stats.active}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="336,851" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardChange"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_sides"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintDimensionRatio="0.98"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardActive"
            app:layout_constraintTop_toBottomOf="@id/cardAffected">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TabText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="@dimen/margin_sides"
                    android:text="@string/change"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvChange"
                    style="@style/CountTextSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{stats.change}"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="336,851" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/white_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardActive" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/margin_sides"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChartTitle" />

        <TextView
            android:id="@+id/tvChartTitle"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sides"
            android:layout_marginTop="40dp"
            android:text="@string/dailyNewCases"
            android:textColor="@color/textBlack"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <ProgressBar
            android:id="@+id/pbChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/margin_sides"
            android:layout_marginEnd="@dimen/margin_sides"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
